--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.3.4
 autopep8==1.5.7
+dj-database-url==0.5.0
 Django==3.2.4
 django-cors-headers==3.7.0
 django-phonenumber-field==5.2.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 flake8==3.9.2
+gunicorn==20.1.0
 mccabe==0.6.1
 phonenumbers==8.12.26
 pycodestyle==2.7.0
@@ -14,3 +16,4 @@ PyJWT==2.1.0
 pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
+whitenoise==5.3.0
