--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ flake8==3.9.2
 gunicorn==20.1.0
 mccabe==0.6.1
 phonenumbers==8.12.26
+Pillow==8.3.1
 pycodestyle==2.7.0
 pyflakes==2.3.1
 PyJWT==2.1.0
